# CPPGLMC

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
libs/: libglfw.3.4.dylib  libglfw.3.dylib
shaders/: shader.frag  shader.vert
src/: block.cpp  block.h  camera.cpp  camera.h  game.cpp  game.h  glad.c  include.cpp  include.h  main.cpp  player.cpp  player.h  shader.cpp  shader.h  stb_image.cpp  window.cpp  window.h  window.mm  world.cpp  world.h
